qa/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-buses
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api-buses
  template:
    metadata:
      labels:
        app: backend-api-buses
    spec:
      containers:
        - name: backend-api-buses
          image: acrbusesjalapa.azurecr.io/backend-api-buses:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-buses
  namespace: qa
spec:
  selector:
    app: backend-api-buses
  ports:
    - port: 80
      targetPort: 8080
