qa/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-buses
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app-buses
  template:
    metadata:
      labels:
        app: frontend-app-buses
    spec:
      containers:
        - name: frontend-app-buses
          image: acrbusesjalapa.azurecr.io/frontend-app-buses:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-buses
  namespace: qa
spec:
  selector:
    app: frontend-app-buses
  ports:
    - port: 80
      targetPort: 80
